<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:roundProgress="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/alert_item_bar"
    android:gravity="center_horizontal|bottom"
    android:orientation="vertical"
    android:paddingBottom="5dp" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

    <TextView
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/close"
            android:textColor="@color/title_btn_text_selector"
            android:textSize="18sp" />

    <TextView
            android:id="@+id/alert_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="10dp"
            android:text="@string/select_time"
            android:textColor="@color/eair_text_black"
            android:textSize="16sp" />

    <TextView
            android:id="@+id/btn_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="15dp"
            android:text="@string/yes"
            android:textColor="@color/title_btn_text_selector"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <com.zwxt.shareApp.view.WheelView
            android:id="@+id/hour_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            roundProgress:text_size="20"
            roundProgress:value_text_color="0xff000000"
            roundProgress:value_text_size="25" />

        <com.zwxt.shareApp.view.WheelView
            android:id="@+id/min_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            roundProgress:text_size="20"
            roundProgress:value_text_color="0xff000000"
            roundProgress:value_text_size="25" />

        <com.zwxt.shareApp.view.WheelView
            android:id="@+id/second_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            roundProgress:text_size="20"
            roundProgress:value_text_color="0xff000000"
            roundProgress:value_text_size="25"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>